<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.loslolos.synapse.AccountInformationActivity">

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/quicksand"
        android:text="@string/account_info_title"
        app:layout_constraintBottom_toTopOf="@+id/editTextFirstName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/textViewFirstName"
        style="@style/SubtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/first_name_subtitle"
        app:layout_constraintBottom_toTopOf="@+id/editTextFirstName"
        app:layout_constraintLeft_toLeftOf="@+id/editTextFirstName" />

    <EditText
        android:id="@+id/editTextFirstName"
        style="@style/RegularText"
        android:layout_width="315dp"
        android:layout_height="31dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextLastName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView
        android:id="@+id/textViewLastName"
        style="@style/SubtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/last_name_subtitle"
        app:layout_constraintBottom_toTopOf="@+id/editTextLastName"
        app:layout_constraintStart_toStartOf="@+id/editTextLastName" />

    <EditText
        android:id="@+id/editTextLastName"
        style="@style/RegularText"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/last_name_hint"
        android:inputType="textPersonName"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

    <TextView
        android:id="@+id/textViewEmail"
        style="@style/SubtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/email_subtitle"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintLeft_toLeftOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextEmail"
        style="@style/RegularText"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastName" />

    <TextView
        android:id="@+id/textViewUsername"
        style="@style/SubtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/username_subtitle"
        app:layout_constraintBottom_toTopOf="@+id/editTextUsername"
        app:layout_constraintStart_toStartOf="@+id/editTextUsername" />

    <EditText
        android:id="@+id/editTextUsername"
        style="@style/RegularText"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <TextView
        android:id="@+id/textViewPassword"
        style="@style/SubtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/password_subtitle"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/RegularText"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordC"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

    <TextView
        android:id="@+id/textViewPasswordC"
        style="@style/SubtitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:text="@string/password_confirmation_subtitle"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordC"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordC" />

    <EditText
        android:id="@+id/editTextPasswordC"
        style="@style/RegularText"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/password_confirmation_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonNextAI"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonNextAI"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:alpha="1.0"
        android:background="@drawable/button_border_1"
        android:elevation="0dp"
        android:text="@string/next_button"
        android:textAllCaps="false"
        android:textColor="#E4E5E5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordC" />
</android.support.constraint.ConstraintLayout>
