<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.loslolos.synapse.FavoritesActivity">

    <ImageButton
        android:id="@+id/imageButtonProfile2"
        android:layout_width="44dp"
        android:layout_height="43dp"
        android:background="@drawable/profile_button"
        android:contentDescription="@string/profile_button_description"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonResearch2"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonResearch2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButtonResearch2"
        app:srcCompat="?android:attr/selectableItemBackground" />

    <ImageButton
        android:id="@+id/imageButtonResearch2"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:background="@drawable/research_button"
        android:contentDescription="@string/research_button_description"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonSearch2"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonSearch2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButtonProfile2"
        app:layout_constraintTop_toTopOf="@+id/imageButtonSearch2" />

    <ImageButton
        android:id="@+id/imageButtonSearch2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/search_button"
        android:contentDescription="@string/search_button_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonFavorite2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButtonResearch2"
        app:layout_constraintTop_toBottomOf="@id/scrollViewFavorites" />

    <ImageButton
        android:id="@+id/imageButtonFavorite2"
        android:layout_width="47dp"
        android:layout_height="43dp"
        android:background="@drawable/favorites_button"
        android:contentDescription="@string/favorite_button_description"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonSearch2"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonSettings2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButtonSearch2"
        app:layout_constraintTop_toTopOf="@+id/imageButtonSearch2" />

    <ImageButton
        android:id="@+id/imageButtonSettings2"
        android:layout_width="46dp"
        android:layout_height="42dp"
        android:background="@drawable/settings_button"
        android:contentDescription="@string/settings_button_description"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonFavorite2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageButtonFavorite2"
        app:layout_constraintTop_toTopOf="@+id/imageButtonFavorite2" />

    <TextView
        android:id="@+id/textViewFavoritesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/favorites_title"
        android:textAppearance="@style/TitleText"
        app:layout_constraintBottom_toTopOf="@id/scrollViewFavorites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />


    <ScrollView
        android:id="@+id/scrollViewFavorites"
        android:layout_width="330dp"
        android:layout_height="415dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewFavoritesTitle"
        app:layout_constraintBottom_toTopOf="@id/imageButtonSearch2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="76dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textViewUser1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1.75"
                    android:gravity="center_vertical"
                    android:text="@string/other_user_name1"
                    android:textAppearance="@style/SubtitleText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.509"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="92dp" />

                <ImageButton
                    android:id="@+id/imageButtonUser1"
                    android:layout_width="34dp"
                    android:layout_height="23dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/arrow" />

            </LinearLayout>



            <TextView
                android:id="@+id/textViewFavoriteInfo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_user_info" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textViewUser2"
                    android:layout_width="258dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1.75"
                    android:gravity="center_vertical"
                    android:text="@string/other_user_name2"
                    android:textAppearance="@style/RegularText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.509"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="159dp" />

                <ImageButton
                    android:id="@+id/imageButtonUser2"
                    android:layout_width="34dp"
                    android:layout_height="23dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/arrow" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewFavoriteInfo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_user_info" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textViewUser3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1.75"
                    android:gravity="center_vertical"
                    android:text="@string/other_user_name3"
                    android:textAppearance="@style/RegularText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.509"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="266dp" />

                <ImageButton
                    android:id="@+id/imageButtonUser3"
                    android:layout_width="34dp"
                    android:layout_height="23dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/arrow" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewFavoriteInfo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_user_info" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textViewUser4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1.75"
                    android:gravity="center_vertical"
                    android:text="@string/other_user_name4"
                    android:textAppearance="@style/RegularText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.509"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="311dp" />

                <ImageButton
                    android:id="@+id/imageButtonUser4"
                    android:layout_width="34dp"
                    android:layout_height="23dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/arrow" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewFavoriteInfo4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_user_info" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textViewUser5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1.75"
                    android:gravity="center_vertical"
                    android:text="@string/other_user_name5"
                    android:textAppearance="@style/RegularText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.509"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="396dp" />

                <ImageButton
                    android:id="@+id/imageButtonUser5"
                    android:layout_width="34dp"
                    android:layout_height="23dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/arrow" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewFavoriteInfo5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_user_info" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
